# yohei-app

.github/workflows/: push-to-ecr.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/scripts/: push_to_ecr.sh
backend/src/: main.rs
docs/: github-actions-ecr-setup.md
terraform/: alb.tf  dns.tf  ecr.tf  ecs.tf  github-actions.tf  iam.tf  logs.tf  main.tf  network.tf  outputs.tf  security.tf
