[package]
name = "yohei-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8"}
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

